<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="ru.ryabov.pet.application.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/AuthFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_MainFragment"
            app:destination="@id/MainFragment" />
    </fragment>
    <fragment
        android:id="@+id/AuthFragment"
        android:name="ru.ryabov.pet.application.AuthFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_auth">

        <action
            android:id="@+id/action_SecondFragment_to_MainFragment"
            app:destination="@id/MainFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/MainFragment"
        android:name="ru.ryabov.pet.application.MainFragment"
        android:label="@string/main_fragment_label"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_MainFragment_to_NoteFragment"
            app:destination="@id/NoteFragment" />
    </fragment>

    <fragment
        android:id="@+id/NoteFragment"
        android:name="ru.ryabov.pet.application.NoteFragment"
        android:label="@string/note_fragment_label"
        tools:layout="@layout/note_fragment">
        <action
            android:id="@+id/action_NoteFragment_toMainFragment"
            app:destination="@id/MainFragment" />
    </fragment>

</navigation>